the atlas database addedd

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL='mongodb://localhost:27017/newmvcdb'
+URL="mongodb+srv://bhupendrapaliwal:Ravita1979@cluster0.ey8speb.mongodb.net/newmvc?retryWrites=true&w=majority&appName=Cluster0"
 PORT=8000
